VE-3344: bumped libvcx version